fix: webauthn button text out of bounds
fixes gravitee-io/issues#8336

--- a/gravitee-am-gateway/gravitee-am-gateway-handler/gravitee-am-gateway-handler-core/src/main/resources/webroot/assets/css/main.css
+++ b/gravitee-am-gateway/gravitee-am-gateway-handler/gravitee-am-gateway-handler-core/src/main/resources/webroot/assets/css/main.css
@@ -1,3 +1,18 @@
+/**
+ * Copyright (C) 2015 The Gravitee team (http://gravitee.io)
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *         http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
@@ -328,6 +343,8 @@ div.short-section > input + input {
     background: var(--button-social-background-color);
     padding: 0;
     align-self: auto;
+    height: auto;
+    text-align: center;
 }
 
 .button.button-disabled {
@@ -389,6 +406,7 @@ div.short-section > input + input {
 
 .description {
     padding-top: 8px;
+    padding-bottom: 8px;
 }
 
 a {
